feat: fixing some tests - coverage for controller and services in 100%